@@ -1,8 +1,6 @@
 plugins {
-    id "me.champeau.gradle.jmh" version "0.4.8"
+    id "me.champeau.gradle.jmh" version "0.5.3"
 }
-
-apply plugin: 'java'
 
 configurations {
     buildTools
@@ -12,7 +10,11 @@ test {
     useJUnitPlatform()
 
     jvmArgs '-Xmx512m', '-XX:+HeapDumpOnOutOfMemoryError', '-XX:HeapDumpPath=/__w/inspectit-ocelot/inspectit-ocelot/test_heapdump.bin'
-
+    // enable reflection used in relation with OpenTelemetry for JDK 11 and later
+    if(JavaVersion.current() >= JavaVersion.VERSION_11) {
+        // --add-opens has the following syntax: {A}/{package}={B}
+        jvmArgs "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+    }
     testLogging {
         exceptionFormat = 'full'
     }
@@ -41,20 +43,14 @@ dependencies {
             'jarcheck:jarcheck:1.5'
     )
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
-    testImplementation(
-            'org.junit.jupiter:junit-jupiter-api:5.3.1',
-            'org.mockito:mockito-junit-jupiter:2.23.0'
-    )
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 
     implementation(
             project(':inspectit-ocelot-config'),
             project(':inspectit-ocelot-sdk'),
 
-
             // spring related
             "org.springframework.boot:spring-boot:${springVersion}",
-            'org.yaml:snakeyaml:1.23',
+            'org.yaml:snakeyaml:1.30',
             'javax.annotation:javax.annotation-api:1.3.2', //Required for @PostConstruct and @PreDestroy to work in Java9+
 
             // data validation
@@ -62,7 +58,7 @@ dependencies {
             'org.hibernate.validator:hibernate-validator:6.0.13.Final',
 
             // logging
-            'ch.qos.logback:logback-classic:1.2.3',
+            "ch.qos.logback:logback-classic:${logbackVersion}",
 
             // utils
             "org.apache.commons:commons-lang3:3.+",
@@ -114,11 +110,15 @@ dependencies {
             "io.opentelemetry:opentelemetry-sdk-testing",
             "io.opentelemetry:opentelemetry-proto:1.7.1-alpha",
 
-            'org.springframework:spring-test:5.1.3.RELEASE',
+            // matching the spring-core version used in the currently used version of spring boot version
+            'org.springframework:spring-test:5.3.14',
+
+            'org.junit.jupiter:junit-jupiter-api:5.8.2',
+            'org.mockito:mockito-junit-jupiter:4.2.0',
+
             // to make use of SpyBean
             "org.springframework.boot:spring-boot-test:2.1.4.RELEASE",
-            // LogCapturer
-            "io.github.netmikey.logunit:logunit-jul:1.1.0",
+
             'org.apache.httpcomponents:httpclient:4.5.6',
             "org.mockito:mockito-core:${mockitoVersion}",
             'org.assertj:assertj-core:3.11.1',
@@ -139,6 +139,16 @@ dependencies {
             'com.linecorp.armeria:armeria-grpc-protocol:1.14.1',
 
             'com.google.protobuf:protobuf-java-util:3.15.7',
+
+            // LogCapturer
+            'io.github.netmikey.logunit:logunit-core:1.1.3',
+            // jul-slf4j bridge needed to redirect OTEL logs using java.util.logging to logback
+            "org.slf4j:jul-to-slf4j:1.7.5",
+    )
+    testRuntimeOnly (
+            'org.junit.jupiter:junit-jupiter-engine:5.8.2',
+            // LogCapturer
+            'io.github.netmikey.logunit:logunit-logback:1.1.3',
     )
 
     jmh(
@@ -195,6 +205,8 @@ jar.dependsOn checkDependencyJavaVersions
 jar.dependsOn generateVersionFile
 
 jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
     archiveName = "${project.name}.jar"
 
     // include version file
